Fix display of multi-select when overflowing

--- a/src/pretalx/static/orga/scss/_select.scss
+++ b/src/pretalx/static/orga/scss/_select.scss
@@ -50,6 +50,7 @@
         display: inline-flex;
         margin-bottom: 0;
         max-width: 100%;
+        min-height: 32px;
 
         &::after {
           content: "";
